@@ -3,7 +3,6 @@ package owl.ltl;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.junit.Test;
 import org.junit.experimental.theories.DataPoints;
@@ -15,7 +14,7 @@ public class FragmentsTest {
   public static final List<Formula> FORMULAS;
 
   static {
-    FORMULAS = ImmutableList.of(
+    FORMULAS = List.of(
       LtlParser.syntax("true"),
       LtlParser.syntax("false"),
       LtlParser.syntax("a"),
